--- a/TASK1/Portfolio.html
+++ b/TASK1/Portfolio.html
@@ -17,7 +17,7 @@
 
   <section id="about">
     <div class="container">
-      <img src="./files/Chethan.jpg" alt="Chethan">
+      <img src="./Chethan.jpg" alt="Chethan">
       <p>
         Hello, I'm Chethan, a passionate web developer with a focus on creating user-friendly and engaging websites.
       </p>
@@ -41,12 +41,12 @@
     <div class="container">
       <h2>Projects</h2>
       <div class="project">
-        <img src="./files/Project1.jpeg" alt="Project 1">
+        <img src="./Project1.jpeg" alt="Project 1">
         <h3>Smart Cradle System</h3>
         <p>The baby monitoring system gives a reliable and efficient baby monitor that can play a vital role in providing better care and protection for any infant. This paper presents the design of Baby Monitoring smart cradle system using Raspberry Pi3</p>
       </div>
       <div class="project">
-        <img src="./files/Project2.jpeg" alt="Project 2">
+        <img src="./Project2.jpeg" alt="Project 2">
         <h3>BMI Calculator</h3>
         <p>BMI Calculator project demonstrates the practical application of R 
             programming in the field of health and fitness. By leveraging the power of Shiny, we have 
@@ -59,7 +59,7 @@
   <section id="resume">
     <div class="container">
       <h2>Resume</h2>
-      <p>Download my <a href="./files/Chethan cv.pdf" target="_blank">resume</a>.</p>
+      <p>Download my <a href="./Chethan cv.pdf" target="_blank">resume</a>.</p>
     </div>
   </section>
 
